--- a/templates/d2api/index.html
+++ b/templates/d2api/index.html
@@ -6,11 +6,7 @@
 {% load d2api_extras %}
 {% block style %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-<style>
-    .icon {
-        filter: brightness(0) saturate(100%) invert(24%) sepia(76%) saturate(2402%) hue-rotate(205deg) brightness(91%) contrast(95%);
-    }
-</style>
+<link href="{% static 'css/index.css' %}">
 {% endblock style %}
 
 {% block script %}
