--- a/templates/d2api/index.html
+++ b/templates/d2api/index.html
@@ -23,12 +23,13 @@
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown">Dropdown button</button>
-        <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
+        <div>Item name</div>
+        <div>Item type</div>
+        <div>Class</div>
+        <div>Vendor</div>
+        <div>Sales date</div>
+        <div>Stats</div>
+        <div>Recommend</div>
         <button class="btn btn-primary" disabled>Apply</button>
     </div>
 </div>
