--- a/templates/d2tal/index.html
+++ b/templates/d2tal/index.html
@@ -33,7 +33,7 @@
                 <table class="table table-sm align-middle">
                     <tbody>
                         <tr>
-                            <th scope="row">Item name</th>
+                            <th scope="row" style="width: 33.3%;">Item name</th>
                             <td>
                                 <div class="input-group">
                                     <input type="text" class="form-control" name="itemName" value="{{ item_name }}">
@@ -218,10 +218,6 @@
                                     <input type="number" class="form-control" name="maxStrength" placeholder="max" value="{{ maxStrength }}">
                                 </div>
                             </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Recommend</th>
-                            <td></td>
                         </tr>
                     </tbody>
                 </table>
