--- a/templates/d2tal/console.html
+++ b/templates/d2tal/console.html
@@ -14,11 +14,10 @@
     }
 
     function renderCalendar(data) {
-        console.log(data.result);
         var calendarEl = document.getElementById('calendar');
         var calendar = new FullCalendar.Calendar(calendarEl, {
-            timeZone: 'UTC',
-            initialView: 'multiMonthYear',
+            timezone: 'local',
+            initialView: 'dayGridMonth',
             editable: true,
             events: data.result
         });
